# AgentOS-cli

./: .gitignore  CLAUDE.md  README.md  elegant_click_typer.py  example_agent_usage.py  main.py  pyproject.toml  test.py  test_agent_decide.py  test_llm_provider.py  test_models.py
archive/: event_bus.py
configs/agents/: analyst.yaml  assistant.yaml  decide.yaml
docs/: agentos-architecture-summary.md  agentos-eventbus-spec.md  eventchain-architecture.md
docs/archive/: agentcloud_architecture.md  agentos_product_design.md  agentos_system_design.md  development_blueprint.md  project-status.md  service_example.py
modules/: __init__.py  event_schemas.py  llm_provider.py
modules/agents/: agent_config.py  llm_provider.py
modules/cli/: __init__.py  app.py  command_history.txt  provider.py  registry.py
modules/eventbus/: README.md  __init__.py  event_bus.py  event_catalog.md  event_chain.py  event_registry.py  event_schemas.py  interpolator.py  models.py  schemas.py  thread_manager.py
modules/handlers/: __init__.py  agent_handlers.py  memory_handlers.py  system_handlers.py  task_handlers.py  thread_handlers.py
modules/persistence/: __init__.py  event_storage.py  thread_storage.py
modules/providers/: cli_provider.py  enhanced_cli_provider.py  llm_provider.py  thread_manager.py
modules/tasks/: IMPLEMENTATION.md  README.md  __init__.py  example.py  hooks.py  manager.py  (+3 more)
tests/: test_cli_provider.py  test_event_bus.py  test_event_chain.py  test_event_registry.py  test_llm_provider.py  test_models.py  test_parameter_interpolator.py  test_thread_manager.py
(+11 files in other folders)
