[project]
name = "agentos-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.57.1",
    "openai>=1.93.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.0.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
